# talk-rs

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.org  autogen.sh  config.example.yaml  sample-metadata-realtime.yml  sample-metadata.yml
.package.d/: config
.package.d/autogen.d/: 20-org-to-md.sh
.sisyphus/notepads/talk-rs/: decisions.md  issues.md  learnings.md
doc/: multi-provider-design.md
examples/: surface_probe.rs  visualizer_poc.rs
src/: clipboard.rs  config.rs  daemon.rs  error.rs  gtk_theme.rs  lib.rs  main.rs  model_fetch.rs  monitor.rs  overlay.rs  paste.rs  recording_cache.rs  speak.rs  transcribe.rs  visualizer.rs  x11.rs
src/audio/: bt_profile.rs  cpal_capture.rs  encoder.rs  file_source.rs  indicator.rs  mock.rs  mod.rs  monitor_capture.rs  pipewire_capture.rs  player.rs  resample.rs  ring_buffer.rs  tee.rs  writer.rs
src/cli/: def.rs  log.rs  mod.rs
src/cli/action/: dictate.rs  mod.rs  paste.rs  record.rs  record_ui.rs  transcribe.rs
src/core/: clipboard.rs  config.rs  daemon.rs  error.rs  mod.rs  monitor.rs  overlay.rs  picker_cache.rs  recording_cache.rs  visualizer.rs
src/core/audio/: cpal_capture.rs  encoder.rs  file_source.rs  indicator.rs  mock.rs  mod.rs  monitor_capture.rs  pipewire_capture.rs  resample.rs  writer.rs
src/core/transcription/: mistral.rs  mod.rs  openai.rs  openai_realtime.rs  realtime.rs
src/dictate/: mod.rs  models.rs  oneshot.rs  pick.rs  picker.rs  picker_backend.rs  realtime.rs  streaming.rs  text.rs  toggle.rs
src/dictate/picker/: backend.rs  cache.rs  mod.rs  ui.rs
src/paste/: mod.rs  node.rs
src/paste/nodes/: chunk.rs  clipboard.rs  detect.rs  mod.rs  wm_class.rs  xtest.rs
src/record/: audio.rs  entries.rs  mod.rs  player.rs  ui.rs
src/synthesis/: lang.rs  mistral.rs  mistral_presets.rs  mod.rs  resolve.rs
src/synthesis/kokoro/: consent.rs  mod.rs  model.rs  synthesizer.rs  voices.rs
src/telemetry/: mod.rs
src/transcription/: http.rs  jobs.rs  mistral.rs  mod.rs  model_suggestions.rs  openai.rs  openai_realtime.rs  realtime.rs  whisper_local.rs
src/transcription/parakeet/: consent.rs  mod.rs  model.rs  transcriber.rs
src/transcription/transport/: http.rs  mod.rs  retry.rs  validate_cache.rs  ws.rs
src/widgets/: audio_player_bar.rs  mod.rs
src/x11/: clipboard.rs  mod.rs  overlay.rs  render_util.rs  visualizer.rs
tests/: audio_loopback.rs  bt_profile_smoke.rs  integration_audio.rs  integration_clipboard.rs  integration_encoder.rs  integration_kokoro.rs  integration_parakeet.rs  integration_record.rs  integration_speak.rs  integration_transcribe.rs  transport_integration.rs
tests/fixtures/: sine_440_0.5s_mono.m4a  sine_440_0.5s_stereo.m4a  voxtral-response.json
