[package]
name = "talk-rs"
version = "%%version%%"
edition = "2021"
authors = ["Valentin Lab <valentin.lab@kalysto.org>"]
license = "MIT"
description = "Voice dictation for Linux -- record, transcribe, and paste"
readme = "README.md"
exclude = [
    "README.org",
    ".package.d/",
    "autogen.sh",
    ".gitignore",
    "AGENTS.md",
    "CLAUDE.md",
    "doc/",
    "sample-metadata*.yml",
]

[lib]
name = "talk_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
fern = "0.6"
colored = "2"
thiserror = "1"
cpal = "0.15"
pipewire = { version = "0.9", features = ["v0_3_43"] }
rubato = "1.0"
audioadapter-buffers = "2.0"
opus = "0.3"
ogg = "0.9"
byteorder = "1"
reqwest = { version = "0.11", features = ["json", "stream", "multipart"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
directories = "5"
chrono = "0.4"
async-trait = "0.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
base64 = "0.22"
url = "2"
serde_json = "1"
nix = { version = "0.28", features = ["signal", "process", "fs"] }
x11rb = { version = "0.13", features = ["shape", "xfixes", "randr"] }
png = "0.17"
fontdue = "0.9"
gtk4 = { version = "0.8", features = ["v4_10"] }
gdk4-x11 = "0.8"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
tempfile = "3"
wiremock = "0.6"
