[package]
name = "talk-rs"
version = "0.4.0-dev.202603100657"
edition = "2021"
authors = ["Valentin Lab <valentin.lab@kalysto.org>"]
license = "MIT"
description = "Voice dictation for Linux -- record, transcribe, and paste"
readme = "README.md"
exclude = [
    "README.org",
    ".package.d/",
    "autogen.sh",
    ".gitignore",
    "AGENTS.md",
    "CLAUDE.md",
    "doc/",
    "sample-metadata*.yml",
]

[lib]
name = "talk_rs"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive", "env"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4"
fern = "0.6"
colored = "2"
thiserror = "1"
cpal = "0.15"
pipewire = { version = "0.9", features = ["v0_3_43"] }
libpulse-binding = "2.30"
rubato = "1.0"
audioadapter-buffers = "2.0"
opus = "0.3"
ogg = "0.9"
symphonia = { version = "0.5", default-features = false, features = ["aac", "isomp4"] }
byteorder = "1"
reqwest = { version = "0.13", features = ["json", "stream", "multipart"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
directories = "5"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
base64 = "0.22"
url = "2"
serde_json = "1"
nix = { version = "0.28", features = ["signal", "process", "fs"] }
x11rb = { version = "0.13", features = ["shape", "xfixes", "randr", "xtest"] }
png = "0.17"
fontdue = "0.9"
gtk4 = { version = "0.8", features = ["v4_10"] }
gdk4-x11 = "0.8"
dark-light = "2.0"
dissimilar = "1"
fs2 = "0.4.3"
# Local ASR backend (Parakeet TDT via ONNX Runtime, CPU).  Phase 0
# verified that a bare `sherpa-onnx = "1.13"` already static-links the
# prebuilt C++ archive (no runtime .so, ~10 s build); keeping default
# features so the static-binary download is not disabled.  `tar` /
# `bzip2` are used by the model-download path landed in a later
# phase — declared here so the `parakeet` feature is self-contained
# once that lands.
sherpa-onnx = { version = "1.13", optional = true }
tar = { version = "0.4", optional = true }
bzip2 = { version = "0.4", optional = true }

[features]
# `parakeet` is ON by default: prebuilt binaries ship the local
# backend working out-of-the-box.  Build with
# `--no-default-features` to drop the static sherpa-onnx C++ lib
# (smaller binary, cloud providers only).
default = ["parakeet"]
parakeet = ["dep:sherpa-onnx", "dep:tar", "dep:bzip2"]

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
insta = "1"
tempfile = "3"
wiremock = "0.6"
